# requestr

./: Cargo.toml  LICENSE  Makefile  README.md
.github/: audit.yml  coverage.yml  release.yml
.github/workflows/: audit.yml  coverage.yml  release.yml  test.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs  template.rs
examples/jsonplaceholder/: filter  filter.yml  posts
examples/postman-echo/: post
