[package]
name = "requestr"
version = "0.1.0"
authors = ["Stefan Kuhn <stefan@kuhn.bayern>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
requestr-core = { path = "../core" }

clap-verbosity-flag = "~0.3"
simplelog = "~0.9"
log = "~0.4"
structopt = "~0.3"
lazy_static = "1.4"
