[package]
name = "requestr-core"
version = "0.1.0"
authors = ["Stefan Kuhn <stefan@kuhn.bayern>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "~0.4"
serde = { version = "~1.0", features = ["derive"] }
serde_yaml = "~0.8"

reqwest = { version = "~0.11", features = ["blocking"] }
