[package]
name = "requestr-core"
version = "0.1.0"
authors = ["Stefan Kuhn <stefan@kuhn.bayern>"]
edition = "2018"
license-file = "../LICENSE"
description = "Core lib for tools to store, share and run http request templates easily"
repository = "https://github.com/Semptic/requestr"
readme = "../README.md"
homepage = "https://github.com/Semptic/requestr"
keywords = [ "http", "request", "share" ]
workspace = ".."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "~1.0"
thiserror = "~1.0"

log = "~0.4"
serde = { version = "~1.0", features = ["derive"] }
serde_yaml = "~0.8"

reqwest = { version = "~0.11", features = ["blocking"] }
regex = "~1"
